# font-map

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: tests.yml
benches/: codegen.rs  load-font.rs  render-svg.rs
core/: Cargo.toml
core/src/: codegen.rs  error.rs  font.rs  lib.rs  reader.rs  svg.rs  unicode_range.rs
core/src/codegen/: category.rs  const_kind.rs  docstring.rs  enum_kind.rs  glyph.rs  to_ident.rs
core/src/raw/: ttf.rs
core/src/raw/ttf/: cmap.rs  glyf.rs
core/src/raw/ttf/glyf/: compound.rs  simple.rs  svg.rs
examples/: codegen.rs  generate_enum.rs  loading_fonts.rs
font-map-core/: Cargo.toml
font-map-core/src/: codegen.rs  font.rs  lib.rs  reader.rs  unicode_range.rs
font-map-core/src/codegen/: to_ident.rs
font-map-core/src/raw/: ttf.rs
font-map-core/src/raw/ttf/: cmap.rs  glyf.rs  name.rs  post.rs
font-map-core/src/raw/ttf/glyf/: compound.rs  simple.rs
font-map-macros/: Cargo.toml
font-map-macros/src/: lib.rs
google_material_symbols/: Cargo.toml  build.rs  readme.md
google_material_symbols/src/: lib.rs
macros/src/: lib.rs
nerd_font/: Cargo.toml  build.rs  readme.md
nerd_font/src/: lib.rs
nerd_font_symbols/: Cargo.toml  LICENSE-NERD  NOTICE  readme.md
nerd_font_symbols/src/: lib.rs
src/: lib.rs
