[package]
name = "font-map"
description = "Macros and utilities for parsing font files"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "readme.md"

[workspace]
members = ["macros", "core", "google_material_symbols"]

[features]
default = ["codegen", "extended-svg", "macros"]
macros = ["font-map-macros"]
codegen = ["font-map-core/codegen"]
extended-svg = ["font-map-core/extended-svg", "font-map-macros/extended-svg"]

debug-parser = ["font-map-core/debug-parser"]

[dependencies]
font-map-macros = { workspace = true, optional = true }
font-map-core = { workspace = true }

[workspace.dependencies]
font-map = { path = ".", version = "0.1.0" }
font-map-core = { path = "core", version = "0.1.0" }
font-map-macros = { path = "macros", version = "0.1.0" }

[workspace.package]
version = "0.1.0"
authors = ["@rscarson"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rscarson/font-map"

keywords = ["font", "icon", "iced", "icons", "fonts"]
categories = ["api_bindings", "text_processing", "parsing_tools", "gui"]
