[package]
name = "font-map"
description = "Macros and utilities for parsing font files"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "readme.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["macros", "core", "google_material_symbols", "nerd_font"]

[features]
default = ["codegen", "macros"]
macros = ["font-map-macros"]
codegen = ["font-map-core/codegen"]
extended-svg = ["font-map-core/extended-svg", "font-map-macros/extended-svg"]

debug-parser = ["font-map-core/debug-parser"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
font-map-macros = { workspace = true, optional = true }
font-map-core = { workspace = true }

[workspace.dependencies]
font-map = { path = ".", version = "0.2.6" }
font-map-core = { path = "core", version = "0.2.6" }
font-map-macros = { path = "macros", version = "0.2.6" }

[workspace.package]
version = "0.2.6"
authors = ["@rscarson"]
edition = "2021"
license = "MIT"
repository = "https://github.com/rscarson/font-map"

keywords = ["font", "fonts", "text", "macros", "svg"]
categories = ["api-bindings", "text-processing", "encoding", "gui"]

[[bench]]
name = "load-font"
harness = false

[[bench]]
name = "render-svg"
required-features = ["extended-svg"]
harness = false

[[bench]]
name = "codegen"
required-features = ["codegen"]
harness = false

[[example]]
name = "generate_enum"

[[example]]
name = "loading_fonts"