[package]
name = "font-map-core"
description = "Core font-parsing capabilities for font-map"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
codegen = ["proc-macro2", "syn", "quote"]
extended-svg = ["base64", "flate2"]
debug-parser = []

[dependencies]
iced = { version = "0.13", optional = true }
itoa = "1.0" # Faster SVG rendering
encoding_rs = "0.8.35" # String decode

# Codegen dependencies
proc-macro2 = { version = "1.0", optional = true }
syn = { version = "2.0", optional = true }
quote = { version = "1.0", optional = true }

# Preview image-link generation
base64 = { version = "0.22", optional = true }
flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false, optional = true }
