[package]
name = "font-map-core"
description = "Core font-parsing capabilities for font-map"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
codegen = ["proc-macro2", "syn", "quote"]
extended-svg = ["base64", "flate2"]
debug-parser = []

[dependencies]
# String decode
encoding_rs = "0.8.35"

# Codegen dependencies
proc-macro2 = { version = "1.0.93", optional = true }
syn = { version = "2.0.96", optional = true }
quote = { version = "1.0.38", optional = true }

# Preview image-link generation
base64 = { version = "0.22.1", optional = true }
flate2 = { version = "1.0.35", features = ["zlib-ng"], default-features = false, optional = true }

[profile.release]
debug = true