[package]
name = "font-map-macros"
description = "Code generation macros for font-map"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
default = ["extended-svg"]
extended-svg = ["font-map-core/extended-svg"]

[dependencies]
syn = "2.0"
font-map-core = { workspace = true, features = ["codegen"] }
