[package]
name = "google_material_symbols"
description = "Google Material Design Icon Font"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "readme.md"

[features]
default = ["svg-preview"]
svg-preview = ["font-map-core/extended-svg"]
iced = ["dep:iced"]

[dependencies]
font-map = { workspace = true }
iced = { version = "0.13", optional = true }

[build-dependencies]
font-map-core = { workspace = true, features = ["codegen"] }