[package]
name = "google_material_symbols"
description = "Google Material Design Icon Font"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "readme.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
iced = ["dep:iced"]

[dependencies]
font-map = { workspace = true }
iced = { version = "0.13", optional = true }

[build-dependencies]
font-map = { workspace = true }