[package]
name = "nerd_font"
description = "Enumerated contents of the JetBrainsMono Nerd Font"
version = "0.2.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "readme.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["svg-preview"]
svg-preview = ["font-map-core/extended-svg", "font-map/extended-svg"]
iced = ["dep:iced"]

[dependencies]
font-map = { workspace = true }
iced = { version = "0.13", optional = true }

[build-dependencies]
font-map-core = { workspace = true, features = ["codegen"] }